Adding Flat color scheme, fixing existing color issues and changing sidebar placement trick

--- a/language/en-GB/en-GB.tpl_apptheme-admin.ini
+++ b/language/en-GB/en-GB.tpl_apptheme-admin.ini
@@ -6,7 +6,9 @@
 TPL_APPTHEME_XML_DESCRIPTION="AppTheme Admin is truly a universal Joomla template. It is identical site and admin templates with multile GUI themes and responsively transforms from desktop to tablet to phone. Enjoy!"
 
 TPL_APPTHEME_BACKGROUND_COLOR_DESC="Choose a background colour for static layouts. Default is #F4F6F7"
-TPL_APPTHEME_BACKGROUND_COLOR_LABEL="Background Colour"
+TPL_APPTHEME_BACKGROUND_COLOR_LABEL="Background Color"
+TPL_APPTHEME_COLOR_LABEL="Template Color"
+TPL_APPTHEME_COLOR_DESC="Choose an overall colour for the site template. Default is #203142"
 TPL_APPTHEME_BACKTOTOP="Back to Top"
 
 TPL_APPTHEME_LOGO_LABEL="Logo"
@@ -20,6 +22,7 @@ TPL_APPTHEME_OPTION_SEPIA="Sepia Tone"
 TPL_APPTHEME_OPTION_IRONMAN="Iron Man"
 TPL_APPTHEME_OPTION_MASTERCHIEF="Master Chief"
 TPL_APPTHEME_OPTION_DRIBBBLE="Dribbble"
+TPL_APPTHEME_OPTION_FLAT="Flat"
 
 TPL_APPTHEME_NEW_ARTICLE="New Article"
 TPL_APPTHEME_NEW_CATEGORY="New Category"
