Adding username > account/signout

--- a/language/en-GB/en-GB.tpl_apptheme-admin.ini
+++ b/language/en-GB/en-GB.tpl_apptheme-admin.ini
@@ -31,3 +31,6 @@ TPL_APPTHEME_NEW_MODULE="New Module"
 TPL_APPTHEME_NEW_USER="New User"
 TPL_APPTHEME_NEW_GROUP="New Group"
 TPL_APPTHEME_NEW_EXTENSION="New Extension"
+
+TPL_APPTHEME_EDIT_ACCOUNT="Edit Account"
+TPL_APPTHEME_LOGOUT="Sign Out"
